--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ hr {
 }
 /* Home Style */
 header {
-	background: url(../img/header-bg.jpg) no-repeat bottom right;
+	background: url(../img/header.jpeg) no-repeat bottom right;
 	background-size: cover;
 	color: #cfcfcf;
 	position: relative;
@@ -175,7 +175,7 @@ header p {
 	transition: all 0.5s;
 	color: #0dbf9b;
 }
-/* Gallery Section 
+/* Gallery Section
 ==============================*/
 #works-section {
 	padding: 120px 0;
