--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ header {
 	background: url(../img/header.jpeg) no-repeat bottom right;
 	background-size: cover;
 	color: #cfcfcf;
-	opacity: 0.8;
+	filter: brightness(50%);
 	position: relative;
 	height: 100%;
 }
