--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ header p {
 /* Gazelle section */
 #gazelle-section {
 	padding: 120px 0;
-	background-color: #f6f6f6;
+	background-color: #fff;
 }
 
 /* Gallery Section
