--- a/css/style.css
+++ b/css/style.css
@@ -337,12 +337,20 @@ ol.type li a:hover {
 }
 .section-title.center {
 	padding: 30px 0;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 .section-title h2 {
 	margin-bottom: 30px;
 }
 .subsection-title.center {
 	padding: 30px 0;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 .subsection-title h3 {
 	margin-bottom: 30px;
