--- a/css/style.css
+++ b/css/style.css
@@ -337,18 +337,18 @@ ol.type li a:hover {
 }
 .section-title.center {
 	padding: 30px 0;
-	display: block;
+	/* display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
 }
 .section-title h2 {
 	margin-bottom: 30px;
 }
 .subsection-title.center {
 	padding: 30px 0;
-	display: block;
+	/* display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
 }
 .subsection-title h3 {
 	margin-bottom: 30px;
