--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ header p {
 ==============================*/
 #works-section {
 	padding: 120px 0;
-	background-color: #f6f6f6;
+	background-color: #fff;
 }
 .categories {
 	padding-bottom: 30px;
